# schc-over-sigfox-c

./: .gitignore  CMakeLists.txt  LICENSE  README.md  library.h
config/: CMakeLists.txt  schc.c  schc.h
db/: CMakeLists.txt  storage.c  storage.h
entities/: CMakeLists.txt  fifo_queue.c  fifo_queue.h  fr_procedure.c  fr_procedure.h  fragment_queue.c  fragment_queue.h  rule.c  rule.h  schc_receiver.c  schc_receiver.h  schc_sender.c  schc_sender.h  schc_session.c  schc_session.h  sigfoxprofile.c  sigfoxprofile.h
messages/: CMakeLists.txt  ack.c  ack.h  fragment.c  fragment.h  fragment_header.c  fragment_header.h
sockets/: CMakeLists.txt  client.c  server.c  sigfox_http_socket.c  sigfox_http_socket.h  sigfox_socket.c  sigfox_socket.h
tests/: CMakeLists.txt  CastingTest.c  MiscTest.c  SocketClientTest.c  SocketServerTest.c
tests/entities/: FIFOQueuesTest.c  FRProcedureTest.c  RuleTest.c  SCHCSenderTest.c  SCHCSenderTestRecv.c  SCHCSessionTest.c
tests/messages/: CompoundACKTest.c  FragmentTest.c
tests/sockets/: SocketClientTest.c  SocketServerTest.c
tests/utils/: CastingTest.c  MiscTest.c
utils/: CMakeLists.txt  casting.c  casting.h  misc.c  misc.h
